# nspd-parser

./: .gitignore  bot.py  cli.py  main.py  pyproject.toml  readme.md
nspd_parser/: __init__.py  bot.py  config.py  script.py
